--- a/public/publication/jcal_studentexpectations_paper/cite.bib
+++ b/public/publication/jcal_studentexpectations_paper/cite.bib
@@ -1,9 +1,10 @@
-@article{whitelock2020exploring,
-  title={Exploring student information problem solving behaviour using fine-grained concept map and search tool data},
-  author={Whitelock-Wainwright, Alexander and Laan, Nathan and Wen, Dunwei and Ga{\v{s}}evi{\'c}, Dragan},
-  journal={Computers and Education},
-  volume={145},
-  pages={103731},
-  year={2020},
-  publisher={Elsevier}
+@article{whitelock2019student,
+  title={The Student Expectations of Learning Analytics Questionnaire},
+  author={Whitelock-Wainwright, Alexander and Ga{\v{s}}evi{\'c}, Dragan and Tejeiro, Ricardo and Tsai, Yi-Shan and Bennett, Kate},
+  journal={Journal of Computer Assisted Learning},
+  volume={35},
+  number={5},
+  pages={633--666},
+  year={2019},
+  publisher={Wiley Online Library}
 }
