--- a/public/publication/jcal_crosscultural_studentexpectations_paper/cite.bib
+++ b/public/publication/jcal_crosscultural_studentexpectations_paper/cite.bib
@@ -1,9 +1,7 @@
-@article{whitelock2020exploring,
-  title={Exploring student information problem solving behaviour using fine-grained concept map and search tool data},
-  author={Whitelock-Wainwright, Alexander and Laan, Nathan and Wen, Dunwei and Ga{\v{s}}evi{\'c}, Dragan},
-  journal={Computers and Education},
-  volume={145},
-  pages={103731},
+@article{whitelock2020assessing,
+  title={Assessing the validity of a learning analytics expectation instrument: A multinational study},
+  author={Whitelock-Wainwright, Alexander and Ga{\v{s}}evi{\'c}, Dragan and Tsai, Yi-Shan and Drachsler, Hendrik and Scheffel, Maren and Mu{\~n}oz-Merino, Pedro J and Tammets, Kairit and Delgado Kloos, Carlos},
+  journal={Journal of Computer Assisted Learning},
   year={2020},
-  publisher={Elsevier}
+  publisher={Wiley Online Library}
 }
